--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -1,5 +1,6 @@
 .gpt3__header {
   display: flex;
+  flex-direction: row;
 }
 
 .gpt3__header-content {
@@ -8,74 +9,71 @@
   justify-content: center;
   align-items: flex-start;
   flex-direction: column;
+
   margin-right: 5rem;
 }
 
 .gpt3__header-content h1 {
   font-family: var(--font-family);
-  font-style: normal;
   font-weight: 800;
   font-size: 62px;
   line-height: 75px;
   letter-spacing: -0.04em;
-
-  background: linear-gradient(89.97deg, #ae67fa 1.84%, #f49867 102.67%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
 }
 
 .gpt3__header-content p {
   font-family: var(--font-family);
-  font-style: normal;
   font-weight: 400;
   font-size: 20px;
-  line-height: 27px;
-
+  line-height: 28px;
   color: var(--color-text);
+
   margin-top: 1.5rem;
 }
 
 .gpt3__header-content__input {
   width: 100%;
   margin: 2rem 0 1rem;
+
   display: flex;
+  flex-direction: row;
 }
 
 .gpt3__header-content__input input {
-  background: var(--color-footer);
-  border-radius: 5px 0px 0px 5px;
+  flex: 2;
+  width: 100%;
+  min-height: 50px;
   font-family: var(--font-family);
   font-weight: 400;
   font-size: 20px;
-  line-height: 27px;
-  flex: 2;
-  color: #fff;
-  width: 100%;
-  min-height: 50px;
+  line-height: 28px;
+  background: var(--color-footer);
   border: 2px solid var(--color-footer);
   padding: 0 1rem;
   outline: none;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
+  color: #fff;
+
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
 }
 
 .gpt3__header-content__input button {
   flex: 0.6;
   width: 100%;
   min-height: 50px;
-  background: #ff4820;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
   font-family: var(--font-family);
-  font-weight: bold;
+  font-weight: 400;
   font-size: 20px;
-  line-height: 27px;
-  color: #ffffff;
+  line-height: 28px;
+  background: #ff4820;
+  border: 2px solid #ff4820;
+  padding: 0 1rem;
+  color: #fff;
   cursor: pointer;
   outline: none;
-  padding: 0 1rem;
-  border: none;
+
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
 .gpt3__header-content__people {
@@ -83,6 +81,8 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  flex-direction: row;
+
   margin-top: 2rem;
 }
 
@@ -92,15 +92,13 @@
 }
 
 .gpt3__header-content__people p {
-  margin-left: 1rem;
-  width: 581.92px;
-  height: 37.61px;
   margin: 0 0 0 1rem;
   font-family: var(--font-family);
   font-weight: 500;
   font-size: 12px;
   line-height: 38px;
-  color: #ffffff;
+  color: #fff;
+  text-align: center;
 }
 
 .gpt3__header-image {
@@ -111,8 +109,8 @@
 }
 
 .gpt3__header-image img {
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  flex-shrink: 0;
 }
 
 @media screen and (max-width: 1050px) {
@@ -126,12 +124,12 @@
 }
 
 @media screen and (max-width: 650px) {
-  .gpt3__header h1 {
+  .gpt3__header-content h1 {
     font-size: 48px;
     line-height: 60px;
   }
 
-  .gpt3__header p {
+  .gpt3__header-content p {
     font-size: 16px;
     line-height: 24px;
   }
@@ -139,8 +137,9 @@
   .gpt3__header-content__people {
     flex-direction: column;
   }
+
   .gpt3__header-content__people p {
-    text-align: center;
+    margin: 0;
   }
 
   .gpt3__header-content__input input,
@@ -151,12 +150,12 @@
 }
 
 @media screen and (max-width: 490px) {
-  .gpt3__header h1 {
+  .gpt3__header-content h1 {
     font-size: 36px;
     line-height: 48px;
   }
 
-  .gpt3__header p {
+  .gpt3__header-content p {
     font-size: 14px;
     line-height: 24px;
   }
